# linker-memo

./: README.md  diff.linker-option.txt  ld.almalinux.txt  ld.ubuntu.txt
cmake-rpath-example/: CMakeLists.txt  libhello.c  libhello.h  main.c
lxml2-example/: Makefile  lxml2-example.c
mylib/: README.md  main.c
patchelf-example/: .gitignore  mylib.c
