cmake_minimum_required(VERSION 3.14)
#project(hello C)
project(cmake_rpath_test C)
set(CMAKE_BUILD_RPATH_USE_ORIGIN ON)
# set(CMAKE_INSTALL_PREFIX /home/username/hello)
# set linker option to use RUNPATH (not RPATH)
# SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--enable-new-dtags")
add_library(hello SHARED libhello.c)
add_executable(main main.c)
target_link_libraries(main hello)
